--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-paper": "^4.3.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^2.12.0"
+    "react-native-screens": "^2.12.0",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
