--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.2.0",
@@ -23,6 +24,7 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-background-timer": "^2.4.1",
     "react-native-cli": "^2.0.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-map-link": "^2.7.19",
@@ -30,6 +32,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.12.0",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
