--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -31,3 +31,5 @@ UPLOAD_STORE_FILE=your_key_name.keystore
 UPLOAD_KEY_ALIAS=your_key_name
 UPLOAD_STORE_PASSWORD=tmp12345
 UPLOAD_KEY_PASSWORD=tmp12345
+
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
