--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.12.0",
     "react-native-sound": "^0.11.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "rxjs": "^7.4.0",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
