--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     ext {
+        googlePlayServicesLocationVersion = "17.1.0"
         buildToolsVersion = "29.0.2"
         minSdkVersion = 19
         compileSdkVersion = 29
         targetSdkVersion = 29
+        appCompatVersion = "1.1.0"
     }
     repositories {
         google()
@@ -28,6 +30,14 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven {
+            // Required for react-native-background-geolocation
+            url("${project(':react-native-background-geolocation').projectDir}/libs")
+        }
+        maven {
+            // Required for react-native-background-fetch
+            url("${project(':react-native-background-fetch').projectDir}/libs")
         }
 
         google()
