--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-background-fetch": "^4.0.1",
+    "react-native-background-geolocation": "^4.3.0",
     "react-native-background-timer": "^2.4.1",
     "react-native-cli": "^2.0.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-map-link": "^2.7.19",
+    "react-native-maps": "^0.29.3",
     "react-native-paper": "^4.3.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-safe-area-view": "^1.1.1",
